5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1832_1654.log
== SUBMITION (2019-06-13 18:55:27) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
a,b,c,d,e= 0,0,0,0,0
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.655388
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    a,b,c,d,e= 0,0,0,0,0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:55:30) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
a,b,c,d,e= 0,0,0,0,0
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.55183
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    a,b,c,d,e= 0,0,0,0,0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:55:55) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
a,b,c,d,e= 0,0,0,0,0
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.637903
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    a,b,c,d,e= 0,0,0,0,0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:25) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
a,b,c,d,e= 0,0,0,0,0
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
print(max(z))
print(z)
			 
	 

-- ERROR:
File "XXXX", line 3
    a,b,c,d,e= 0,0,0,0,0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:04:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1

print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.638207
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:22) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
z[0]= a
z[1]= b
z[2]= c
z[3]= d
z[4]= e
for i in v:
	if(i == "AM"):
		a = a + 1
	if(i == "PE"):
		b = b + 1
	if(i == "MG"):
		c = c + 1
	if(i == "SP"):
		d = d + 1
	if(i == "RS"):
		e = e + 1

print(max(z))
print(z)
			 
	 

-- ERROR:
File "XXXX", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:26) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1

print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.65469
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:27) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1

print(max(z))
print(z)
			 
	 

-- ERROR:
File "XXXX", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:29) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1

print(max(z))
print(z)
			 
	 

-- ERROR:
File "XXXX", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:55) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- ERROR:
File "XXXX", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:56) 
-- CODE:
from numpy import *
v = array(eval(input("digite : "))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.449209
-- ERROR:
  File "/home/codebench/codes/1832/1654/main.py", line 3
    z = zeros(5,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:18) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.903925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    v = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:22) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.878285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    v = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:22) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:27) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.790559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    v = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:28) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:03) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:13:06) 
-- CODE:
from numpy import *
v = array(eval(input("digite : ")))
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
1.11671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    v = array(eval(input("digite : ")))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:17:22) 
-- CODE:
from numpy import *
x = input("digite : ")
v = x.split(',')
z = zeros(5,dtype = int)
for i in v:
	if(i == "AM"):
		z[0] = z[0] + 1
	if(i == "PE"):
		z[1] = z[1] + 1
	if(i == "MG"):
		z[2] = z[2] + 1
	if(i == "SP"):
		z[3] = z[3] + 1
	if(i == "RS"):
		z[4] = z[4] + 1
print(max(z))
print(z)
			 
	 

-- EXECUTION TIME:
0.865733
-- TEST CASE 1:
---- input:
PE,MG,MG,SP,PE,SP,MG,MG,MG,MG,AM,AM,RS,SP,RS,AM,AM,PE,MG,RS
---- correct output:
7
[4 3 7 3 3]
---- user output:
7
[4 3 7 3 3]
-- TEST CASE 2:
---- input:
MG,RS,PE,SP,PE,PE,MG,MG,MG,AM,RS
---- correct output:
4
[1 3 4 1 2]
---- user output:
4
[1 3 4 1 2]
-- TEST CASE 3:
---- input:
SP,MG,AM,PE,MG,MG,MG,AM,MG,PE,RS
---- correct output:
5
[2 2 5 1 1]
---- user output:
5
[2 2 5 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
